# Machine-Learning-2023

./: .gitignore  README.md  pyproject.toml
labs/lab1/: exercise1.py  exercise2.py  exercise3.py  scores.txt
labs/lab2/: lab2.py  lab2_pandas.py
labs/lab3/: lab3.py
labs/lab4/: lab4.py
labs/lab5/: lab5.py
labs/lab6/: lab6.py
labs/lab6/data/: commedia.py  load.py
labs/lab7/: lab7.py
labs/lab8/: lab8.py
