[tool.poetry]
name = "machine-learning-2023"
version = "0.1.1"
description = "Machine Learning ad Pattern Recognition Course repository"
authors = ["lorenzobellino <lor.bellino@gmail.com>"]
readme = "README.md"
packages = [{include = "machine_learning_2023"}]

[tool.poetry.dependencies]
python = "^3.8"
argparse = "^1.4.0"
logging = "^0.4.9.6"
matplotlib = "^3.7.1"
pandas = "^1.5.3"
seaborn = "^0.12.2"
PyQt5 = "^5.15.9"
scipy = "1.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
